add thin to Gemfile, update searcher runner script to take the environment as parameter, define different environments for staging and dev, add solr logging config, fix searcher webapp to use settings, enable terms and norms in Solr config

--- a/search/searcher/staging.yml
+++ b/search/searcher/staging.yml
@@ -4,7 +4,7 @@
     address: 127.0.0.1
     port: 4567
     pid: /home/search/thin.pid
-    rackup: /home/search/config.ru
+    rackup: /home/search/staging.ru
     log: /home/search/thin.log
     max_conns: 200
     timeout: 30
