add GPL-2.0+ license and copyright notice

--- a/Rules
+++ b/Rules
@@ -9,6 +9,12 @@
 # Questions -> loki@fosdem.org
 # Documentation -> http://nanoc.stoneship.org/docs/
 #
+# Copyright (C) FOSDEM ASBL/VZW
+#
+# This code and all other code in this project are covered by the
+# GNU General Public License version 2 or later:
+# https://spdx.org/licenses/GPL-2.0+
+#
 
 ##### PREPROCESSING
 preprocess do
