--- a/config.yaml
+++ b/config.yaml
@@ -31,6 +31,13 @@ output_dir: output
 # and does not end with a /
 prefix: /2013
 
+# Colors to use for events and tracks in various grids.
+# These are a combination of two sets of colors from colorlovers.com,
+# namely the following:
+# http://www.colourlovers.com/palette/2510621/NARANJA
+# (and the other one, I forgot...):
+colors: '69D2E7 A7DBD8 E0E4CC F38630 FA6900 EA813D E7A350 FCC777 C3DBB9 A79474'
+
 # A list of index filenames, i.e. names of files that will be served by a web
 # server when a directory is requested. Usually, index files are named
 # “index.html”, but depending on the web server, this may be something else,
