--- a/content/hotels.yaml
+++ b/content/hotels.yaml
@@ -3,45 +3,51 @@ kind: internal
 hotels:
   'Bed & Breakfast':
     'Bed & Brussels':
-      street: 'Main Office: Rue Kindermans, 9'
-      zip: 1050
-      tel: 2 6460737
-      fax: 2 6440114
-      url: http://www.bnb-brussels.be/en/index.html
-      map: http://goo.gl/maps/kV4GK
+      street: 'Main Office: Rue Goffart, 78'
+      zip: '1050'
+      tel: '2 6460737'
+      fax: '2 6440114'
+      url: 'http://www.bnb-brussels.be/en/index.html'
+      map: 'http://osm.org/go/0EoS2qlnn--'
+      #map: 'http://goo.gl/maps/kV4GK'
 
-  Youth Hostels:
+  'Youth Hostels':
     'Bruegel Youth Hostel':
       street: 'Heilig Geeststraat, 2'
       zip: '1000'
       tel: '2 5110436'
       fax: '2 5120711'
       email: 'brussel@vjh.de'
-      url: 'http://www.jeugdherbergen.be/'
-      map: 'http://goo.gl/maps/BfJZz'
+      url: 'http://www.jeugdherbergen.be/brusselE.htm'
+      map: 'http://osm.org/go/0EoS1F2gC--'
+      #map: 'http://goo.gl/maps/BfJZz'
     'Sleep Well Youth Hostel':
       street: 'Rue du Damier, 23'
       zip: '1000'
       tel: '2 2185050'
       fax: '2 2181313'
       email: 'info@sleepwell.be'
-      url: 'http://www.sleepwell.be'
-      map: 'http://goo.gl/maps/DQGlH'
+      url: 'http://www.sleepwell.be/'
+      map: 'http://osm.org/go/0EoThy3a3-'
+      #map: 'http://goo.gl/maps/DQGlH'
     'Youth Hostel Génération Europe':
       street: "Rue de l'Elephant, 4"
       zip: '1080'
       tel: '2 4103858'
       fax: '2 4103905'
-      url: 'http://www.lesaubergesdejeunesse.be/'
-      map: 'http://goo.gl/maps/HTUem'
+      email: 'brussels.europe@lesaubergesdejeunesse.be'
+      url: 'http://www.lesaubergesdejeunesse.be/Brussels-Europe-Introduction?lang=en'
+      map: 'http://osm.org/go/0EoTJlZ0E--'
+      #map: 'http://goo.gl/maps/HTUem'
     'Youth Hostel Jacques Brel':
       street: 'Rue de la Sablonniere, 30'
       zip: '1000'
       tel: '2 2180187'
       fax: '2 2172005'
-      email: 'brussels.brel@laj.be'
-      url: 'http://www.lesaubergesdejeunesse.be/'
-      map: 'http://goo.gl/maps/2Jydm'
+      email: 'brussels.brel@lesaubergesdejeunesse.be'
+      url: 'http://www.lesaubergesdejeunesse.be/Bruxelles-Brel-Presentation,24?lang=en'
+      map: 'http://osm.org/go/0EoTjkBRj--'
+      #map: 'http://goo.gl/maps/2Jydm'
     '2GO4 Quality Hostel':
       street: 'Avenue Emile Jacqmain, 99'
       zip: '1000'
@@ -49,14 +55,17 @@ hotels:
       fax: '2 2193009'
       email: 'info@2go4.be'
       url: 'http://www.2go4.be/'
-      map: 'http://goo.gl/maps/mJybH'
-    'CHEB: Centre Van Gogh':
+      map: 'http://osm.org/go/0EoThZltx-'
+      #map: 'http://goo.gl/maps/mJybH'
+    'CHAB: Centre Van Gogh':
       street: 'Rue Traversiere, 8'
       zip: '1210'
       tel: '2 2170158'
       fax: '2 2197995'
       email: 'info@chab.be'
       url: 'http://www.chab.be/'
+      map: 'http://osm.org/go/0EoTj0jzK-'
+      #map: 'http://goo.gl/maps/wG8yY'
     'Auberge des 3 Fontaines':
       street: 'Chaussée de Wavre, 2057'
       zip: '1160'
@@ -64,5 +73,7 @@ hotels:
       fax: '2 6721939'
       email: 'contact@auberge3fontaines.be'
       url: 'http://www.auberge3fontaines.be/en/'
+      map: 'http://osm.org/go/0EoYhwkm'
+      #map: 'http://goo.gl/maps/nKtWF'
 
 ---
