--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -3,54 +3,54 @@ kind: internal
 deadlines:
   'Cross Distro':
     mail: 2012-October/001635
-    date: 20 Dec.
+    date: 2012-12-20
     days: both
   'CrossDesktop':
     mail: 2012-October/001643
-    date: 14 Dec.
+    date: 2012-12-14
     days: both
   'Embedded and Mobile':
     mail: 2012-November/001650
-    date: 25 Dec.
+    date: 2012-12-25
     days: both
   'Free Java':
     mail: 2012-November/001653
-    date: 21 Dec.
+    date: 2012-12-21
     days: both
   'Legal Issues':
     mail: 2012-November/001652
-    date: 21 Dec.
+    date: 2012-12-21
     days: both
   'Mozilla':
     mail: 2012-November/001654
-    date: 20 Dec.
+    date: 2012-12-20
     days: both
   'Apache OpenOffice':
     days: sat
   'Community Development and Marketing':
     days: sat
     mail: 2012-November/001656
-    date: 23 Dec.
+    date: 2012-12-23
   'FOSS for Scientists':
     days: sat
     mail: 2012-November/001651
-    date: 16 Dec.
+    date: 2012-12-16
   'Graph Processing':
     days: sat
     mail: 2012-October/001636
-    date: 23 Dec.
+    date: 2012-12-23
   'Jabber/XMPP':
     days: sat
   'Microkernels / Component-based OSes':
     days: sat
     mail: 2012-October/001639
-    date: 22 Dec.
+    date: 2012-12-22
   'Mono':
     days: sat
   'PHP and Friends':
     days: sat
     mail: 2012-October/001640
-    date: 14 Dec.
+    date: 2012-12-14
   'Testing and Automation':
     days: sat
   'The Wine Project':
@@ -68,33 +68,34 @@ deadlines:
   'Cloud':
     days: sun
     mail: 2012-November/001649
-    date: 14 Dec.
+    date: 2012-12-14
   'Configuration/Systems Management':
     days: sun
   'LibreOffice':
     days: sun
     mail: 2012-November/001645
-    date: 14 Dec.
+    date: 2012-12-14
   'MySQL & Friends':
     days: sun
     mail: 'http://lists.mysql.com/community/393'
-    date: 21 Dec.
+    date: 2012-12-21
   'NoSQL':
     days: sun
     mail: 2012-November/001648
-    date: 14 Dec.
+    date: 2012-12-14
   'Open Source Game Development':
     days: sun
     mail: 2012-October/001634
-    date: 16 Dec.
+    date: 2012-12-16
   'PostgreSQL':
     days: sun
     mail: 2012-November/001658
-    date: 21 Dec.
+    date: 2012-12-21
   'Python':
     days: sun
   'Smalltalk':
     days: sun
+    date: 2012-12-31
   'Telephony':
     days: sun
 
