--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -73,6 +73,8 @@ deadlines:
     date: 2012-12-14
   'Configuration/Systems Management':
     days: sun
+    mail: 2012-November/001661
+    date: 2012-12-15
   'LibreOffice':
     days: sun
     mail: 2012-November/001645
