--- a/search/searcher/prod.yml
+++ b/search/searcher/prod.yml
@@ -4,6 +4,7 @@
     port: 4567
     pid: ./thin.pid
     rackup: ./prod.ru
+    log: -
     max_conns: 200
     timeout: 30
     max_persistent_conns: 120
