--- a/search/searcher/prod.yml
+++ b/search/searcher/prod.yml
@@ -1,10 +1,10 @@
 ---
     environment: production
-    address: 127.0.0.1
+    address: 0.0.0.0
     port: 4567
     pid: ./thin.pid
     rackup: ./prod.ru
-    log: -
+    log: /dev/null
     max_conns: 200
     timeout: 30
     max_persistent_conns: 120
