add stands page to navigation

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -23,6 +23,7 @@ footer:
     - /schedule/events
     - /distrominiconf
   - Practical Information:
+    - /stands
     - /practical/beerevent
     - /practical/transportation
     - /practical/accommodation
