add CFP for BSD devroom

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -67,6 +67,8 @@ deadlines:
     mail: 2012-November/001647
   'BSD':
     days: sun
+    mail: 2012-November/001662
+    date: 2012-12-17
   'Cloud':
     days: sun
     mail: 2012-November/001649
