--- a/config.yaml
+++ b/config.yaml
@@ -148,7 +148,7 @@ deploy:
 pentabarf:
   conference_id: FOSDEM13
   username: nanoc
-  password: 
+  #password: 
   database: marius
   host:     penta.fosdem.org
   port:     5432
