--- a/config.yaml
+++ b/config.yaml
@@ -139,11 +139,11 @@ deploy:
   public:
     kind: rsync
     dst:  "apeiron.fosdem.org:/var/www/fosdem.org/public/2013"
-    options: [ '-gpPrtvzO', '--delete-after', '--chmod=ug=rwX,o=rX', '--no-perms' ]
+    options: [ '-gpPrtvzO', '--delete-after', '--chmod=Dg+s,ug=rwX,o=rX', '--no-perms' ]
   default:
     kind: rsync
     dst:  "achanes.fosdem.org:/var/www/staging.fosdem.org/public/2013"
-    options: [ '-gpPrtvzO', '--delete-after', '--chmod=ug=rwX,o=rX', '--no-perms' ]
+    options: [ '-gpPrtvzO', '--delete-after', '--chmod=Dg+s,ug=rwX,o=rX', '--no-perms' ]
 
 pentabarf:
   conference_id: FOSDEM13
