--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -53,6 +53,8 @@ deadlines:
     date: 2012-12-14
   'Testing and Automation':
     days: sat
+    mail: 2012-November/001665
+    date: 2012-12-21
   'The Wine Project':
     days: sat
     mail: 'http://www.winehq.org/pipermail/wine-devel/2012-November/097669.html'
