--- a/config.yaml
+++ b/config.yaml
@@ -138,12 +138,12 @@ watcher:
 deploy:
   public:
     kind: rsync
-    dst:  "apeiron.fosdem.org:/var/www/fosdem.org/public/2013"
-    options: [ '-gpPrtvzO', '--delete-after', '--chmod=Dg+sw,ug=rwX,o=rX', '--no-perms' ]
+    dst:  "www-data@apeiron.fosdem.org:/var/www/fosdem.org/public/2013"
+    options: [ '-avzP', '--delete-after' ]
   default:
     kind: rsync
-    dst:  "achanes.fosdem.org:/var/www/staging.fosdem.org/public/2013"
-    options: [ '-gpPrtvzO', '--delete-after', '--chmod=Dg+sw,ug=rwX,o=rX', '--no-perms' ]
+    dst:  "www-data@apeiron.fosdem.org:/var/www/staging.fosdem.org/public/2013"
+    options: [ '-avzP', '--delete-after' ]
 
 pentabarf:
   conference_id: FOSDEM13
