navigation: hook up the keysigning page

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -22,6 +22,7 @@ footer:
     - /schedule/tracks
     - /schedule/events
     - /distrominiconf
+    - /keysigning
   - Practical Information:
     - /stands
     - /practical/beerevent
