--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -27,6 +27,8 @@ deadlines:
     days: both
   'Apache OpenOffice':
     days: sat
+    mail: 2012-November/001664
+    date: 2012-12-23
   'Community Development and Marketing':
     days: sat
     mail: 2012-November/001656
