--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -103,6 +103,8 @@ deadlines:
     date: 2012-12-21
   'Python':
     days: sun
+    mail: 2012-November/001667
+    date: 2012-12-21
   'Smalltalk':
     days: sun
     date: 2012-12-31
