--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -2,113 +2,113 @@
 kind: internal
 deadlines:
   'Cross Distro':
-    mail: 2012-October/001635
-    date: 2012-12-20
+    ann: 2012-October/001635
+    deadline: 2012-12-20
     days: both
   'CrossDesktop':
-    mail: 2012-October/001643
-    date: 2012-12-14
+    ann: 2012-October/001643
+    deadline: 2012-12-14
     days: both
   'Embedded and Mobile':
-    mail: 2012-November/001650
-    date: 2012-12-25
+    ann: 2012-November/001650
+    deadline: 2012-12-25
     days: both
   'Free Java':
-    mail: 2012-November/001653
-    date: 2012-12-21
+    ann: 2012-November/001653
+    deadline: 2012-12-21
     days: both
   'Legal Issues':
-    mail: 2012-November/001652
-    date: 2012-12-21
+    ann: 2012-November/001652
+    deadline: 2012-12-21
     days: both
   'Mozilla':
-    mail: 2012-November/001654
-    date: 2012-12-20
+    ann: 2012-November/001654
+    deadline: 2012-12-20
     days: both
   'Apache OpenOffice':
     days: sat
-    mail: 2012-November/001664
-    date: 2012-12-23
+    ann: 2012-November/001664
+    deadline: 2012-12-23
   'Community Development and Marketing':
     days: sat
-    mail: 2012-November/001656
-    date: 2012-12-23
+    ann: 2012-November/001656
+    deadline: 2012-12-23
   'FOSS for Scientists':
     days: sat
-    mail: 2012-November/001651
-    date: 2012-12-16
+    ann: 2012-November/001651
+    deadline: 2012-12-16
   'Graph Processing':
     days: sat
-    mail: 2012-October/001636
-    date: 2012-12-23
+    ann: 2012-October/001636
+    deadline: 2012-12-23
   'Jabber/XMPP':
     days: sat
   'Microkernels / Component-based OSes':
     days: sat
-    mail: 2012-October/001639
-    date: 2012-12-22
+    ann: 2012-October/001639
+    deadline: 2012-12-22
   'Mono':
     days: sat
   'PHP and Friends':
     days: sat
-    mail: 2012-October/001640
-    date: 2012-12-14
+    ann: 2012-October/001640
+    deadline: 2012-12-14
   'Testing and Automation':
     days: sat
-    mail: 2012-November/001665
-    date: 2012-12-21
+    ann: 2012-November/001665
+    deadline: 2012-12-21
   'The Wine Project':
     days: sat
-    mail: 'http://www.winehq.org/pipermail/wine-devel/2012-November/097669.html'
+    ann: 'http://www.winehq.org/pipermail/wine-devel/2012-November/097669.html'
   'Virtualization':
     days: sat
-    mail: 2012-November/001660
-    date: 2012-12-16
+    ann: 2012-November/001660
+    deadline: 2012-12-16
   'X.org':
     days: sat
   'Ada':
     days: sun
-    mail: 2012-November/001647
+    ann: 2012-November/001647
   'BSD':
     days: sun
-    mail: 2012-November/001662
-    date: 2012-12-17
+    ann: 2012-November/001662
+    deadline: 2012-12-17
   'Cloud':
     days: sun
-    mail: 2012-November/001649
-    date: 2012-12-14
+    ann: 2012-November/001649
+    deadline: 2012-12-14
   'Configuration/Systems Management':
     days: sun
-    mail: 2012-November/001661
-    date: 2012-12-15
+    ann: 2012-November/001661
+    deadline: 2012-12-15
   'LibreOffice':
     days: sun
-    mail: 2012-November/001645
-    date: 2012-12-14
+    ann: 2012-November/001645
+    deadline: 2012-12-14
   'MySQL & Friends':
     days: sun
-    mail: 'http://lists.mysql.com/community/393'
-    date: 2012-12-21
+    ann: 'http://lists.mysql.com/community/393'
+    deadline: 2012-12-21
   'NoSQL':
     days: sun
-    mail: 2012-November/001648
-    date: 2012-12-14
+    ann: 2012-November/001648
+    deadline: 2012-12-14
   'Open Source Game Development':
     days: sun
-    mail: 2012-October/001634
-    date: 2012-12-16
+    ann: 2012-October/001634
+    deadline: 2012-12-16
   'PostgreSQL':
     days: sun
-    mail: 2012-November/001658
-    date: 2012-12-21
+    ann: 2012-November/001658
+    deadline: 2012-12-21
   'Python':
     days: sun
-    mail: 2012-November/001667
-    date: 2012-12-21
+    ann: http://wirtel.be/posts/en/2012/11/20/call_of_papers_fosdem_2013/
+    deadline: 2012-12-21
   'Smalltalk':
     days: sun
-    date: 2012-12-31
-    mail: 2012-November/001659
+    deadline: 2012-12-31
+    ann: 2012-November/001659
   'Telephony':
     days: sun
 
