LICENSE: make licensing terms more explicit
While here, fix bits and pieces that accidentally had the wrong
licence template pasted on them.  Also consistently refer to us
as only "VZW", not "ASBL" or "VZW/ASBL".  Belgium is funny.

--- a/Rules
+++ b/Rules
@@ -9,11 +9,8 @@
 # Questions -> loki@fosdem.org
 # Documentation -> http://nanoc.stoneship.org/docs/
 #
-# Copyright (C) FOSDEM ASBL/VZW
-#
-# This code and all other code in this project are covered by the
-# GNU General Public License version 2 or later:
-# https://spdx.org/licenses/GPL-2.0+
+# Copyright (c) 2012 FOSDEM VZW
+# See the LICENSE file this this repository for licensing terms.
 #
 
 ##### PREPROCESSING
