set telephony devroom cfp

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -111,4 +111,6 @@ deadlines:
     ann: 2012-November/001659
   'Telephony':
     days: sun
+    deadline: 2013-01-04
+    ann: 2012-November/001667
 
