--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -49,6 +49,8 @@ deadlines:
     deadline: 2012-12-22
   'Mono':
     days: sat
+    ann: 2012-December/001670
+    deadline: 2012-12-25
   'PHP and Friends':
     days: sat
     ann: 2012-October/001640
