config: catch up with database moving to apeiron
I finally moved Pentabarf's source of truth from penta.fosdem.org to
apeiron.fosdem.org.  Authentication is unchanged, but the database is
now called 'pentabarf', rather than 'marius'.

--- a/config.yaml
+++ b/config.yaml
@@ -149,8 +149,8 @@ pentabarf:
   conference_id: FOSDEM13
   username: nanoc
   #password: 
-  database: marius
-  host:     penta.fosdem.org
+  database: pentabarf
+  host:     apeiron.fosdem.org
   port:     5432
   schema:   public
   meta_export_file: export/pentabarf.yaml
