--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -21,6 +21,7 @@ footer:
     - /schedule/days
     - /schedule/tracks
     - /schedule/events
+    - /certification
     - /distrominiconf
     - /keysigning
   - Practical Information:
